Se agrego la fuente a los estilos y la estructura de la cabecera de la calculadora al html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,24 @@
   <title>Frontend Mentor | Calculator app</title>
 </head>
 <body>
-
-
+  <main>
+    <section class="b-head">
+      <h1 class="b-head__title">calc</h1>
+      <div class="b-head__theme">
+        <h4 class="b-head__text">THEME</h4>
+        <h4 class="b-head__option">1</h4>
+        <h4 class="b-head__option">2</h4>
+        <h4 class="b-head__option">3</h4>
+        <div class="b-switch">
+          <input class="b-switch_theme_blue b-switch__radio" name="switch" type="radio" checked/>
+          <input class="b-switch_theme_white b-switch__radio" name="switch" type="radio"/>
+          <input class="b-switch_theme_purple b-switch__radio" name="switch" type="radio"/>
+        </div>
+      </div>
+    </section>
+    <section class="b-screen"></section>
+    <section class="b-keypad"></section>
+  </main>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
