Se agregaron los elementos faltantes a la estructura html

--- a/index.html
+++ b/index.html
@@ -23,8 +23,31 @@
         </div>
       </div>
     </section>
-    <section class="b-screen"></section>
-    <section class="b-keypad"></section>
+    
+    <section class="b-screen">
+      <p class="b-screen__result">0</p>
+    </section>
+
+    <section class="b-keypad">
+      <button class="b-keypad__key">7</button>
+      <button class="b-keypad__key">8</button>
+      <button class="b-keypad__key">9</button>
+      <button class="b-keypad__key">DEL</button>
+      <button class="b-keypad__key">4</button>
+      <button class="b-keypad__key">5</button>
+      <button class="b-keypad__key">6</button>
+      <button class="b-keypad__key">+</button>
+      <button class="b-keypad__key">1</button>
+      <button class="b-keypad__key">2</button>
+      <button class="b-keypad__key">3</button>
+      <button class="b-keypad__key">-</button>
+      <button class="b-keypad__key">.</button>
+      <button class="b-keypad__key">0</button>
+      <button class="b-keypad__key">/</button>
+      <button class="b-keypad__key">x</button>
+      <button class="b-keypad__key">RESET</button>
+      <button class="b-keypad__key">=</button>
+    </section>
   </main>
   
   <div class="attribution">
