--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
   <title>Frontend Mentor | Calculator app</title>
 </head>
 <body>
-  <main>
+  <main class="b-main">
     <section class="b-head">
       <h1 class="b-head__title">calc</h1>
       <div class="b-head__theme">
         <h4 class="b-head__text">THEME</h4>
-        <h4 class="b-head__option">1</h4>
-        <h4 class="b-head__option">2</h4>
-        <h4 class="b-head__option">3</h4>
+        <div class="b-head__options">
+          <h4 class="b-head__option">1</h4>
+          <h4 class="b-head__option">2</h4>
+          <h4 class="b-head__option">3</h4>
+        </div>
         <div class="b-switch">
           <input class="b-switch_theme_blue b-switch__radio" name="switch" type="radio" checked/>
           <input class="b-switch_theme_white b-switch__radio" name="switch" type="radio"/>
@@ -23,7 +25,7 @@
         </div>
       </div>
     </section>
-    
+
     <section class="b-screen">
       <p class="b-screen__result">0</p>
     </section>
