Se agregaron los estilos al teclado de la calculadora y se comenzo a trabajar el responsive

--- a/index.html
+++ b/index.html
@@ -31,24 +31,24 @@
     </section>
 
     <section class="b-keypad">
-      <button class="b-keypad__key">7</button>
-      <button class="b-keypad__key">8</button>
-      <button class="b-keypad__key">9</button>
-      <button class="b-keypad__key">DEL</button>
-      <button class="b-keypad__key">4</button>
-      <button class="b-keypad__key">5</button>
-      <button class="b-keypad__key">6</button>
-      <button class="b-keypad__key">+</button>
-      <button class="b-keypad__key">1</button>
-      <button class="b-keypad__key">2</button>
-      <button class="b-keypad__key">3</button>
-      <button class="b-keypad__key">-</button>
-      <button class="b-keypad__key">.</button>
-      <button class="b-keypad__key">0</button>
-      <button class="b-keypad__key">/</button>
-      <button class="b-keypad__key">x</button>
-      <button class="b-keypad__key">RESET</button>
-      <button class="b-keypad__key">=</button>
+      <button class="b-keypad__key b-keypad__key_keys_principal">7</button>
+      <button class="b-keypad__key b-keypad__key_keys_principal">8</button>
+      <button class="b-keypad__key b-keypad__key_keys_principal">9</button>
+      <button class="b-keypad__key b-keypad__key_keys_secondary">DEL</button>
+      <button class="b-keypad__key b-keypad__key_keys_principal">4</button>
+      <button class="b-keypad__key b-keypad__key_keys_principal">5</button>
+      <button class="b-keypad__key b-keypad__key_keys_principal">6</button>
+      <button class="b-keypad__key b-keypad__key_keys_principal">+</button>
+      <button class="b-keypad__key b-keypad__key_keys_principal">1</button>
+      <button class="b-keypad__key b-keypad__key_keys_principal">2</button>
+      <button class="b-keypad__key b-keypad__key_keys_principal">3</button>
+      <button class="b-keypad__key b-keypad__key_keys_principal">-</button>
+      <button class="b-keypad__key b-keypad__key_keys_principal">.</button>
+      <button class="b-keypad__key b-keypad__key_keys_principal">0</button>
+      <button class="b-keypad__key b-keypad__key_keys_principal">/</button>
+      <button class="b-keypad__key b-keypad__key_keys_principal">x</button>
+      <button class="b-keypad__key b-keypad__key_keys_secondary b-keypad__key_width_double_left">RESET</button>
+      <button class="b-keypad__key b-keypad__key_keys_third b-keypad__key_width_double_right">=</button>
     </section>
   </main>
   
