Se agregaron las clases con las variables de colores correspondientes a cada theme del switch

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./styles.css">
   <title>Frontend Mentor | Calculator app</title>
 </head>
-<body>
+<body class="b-body_theme_blue">
   <main class="b-main">
     <section class="b-head">
       <h1 class="b-head__title">calc</h1>
@@ -31,24 +31,24 @@
     </section>
 
     <section class="b-keypad">
-      <button class="b-keypad__key b-keypad__key_keys_principal">7</button>
-      <button class="b-keypad__key b-keypad__key_keys_principal">8</button>
-      <button class="b-keypad__key b-keypad__key_keys_principal">9</button>
+      <button class="b-keypad__key b-keypad__key_keys_primary">7</button>
+      <button class="b-keypad__key b-keypad__key_keys_primary">8</button>
+      <button class="b-keypad__key b-keypad__key_keys_primary">9</button>
       <button class="b-keypad__key b-keypad__key_keys_secondary">DEL</button>
-      <button class="b-keypad__key b-keypad__key_keys_principal">4</button>
-      <button class="b-keypad__key b-keypad__key_keys_principal">5</button>
-      <button class="b-keypad__key b-keypad__key_keys_principal">6</button>
-      <button class="b-keypad__key b-keypad__key_keys_principal">+</button>
-      <button class="b-keypad__key b-keypad__key_keys_principal">1</button>
-      <button class="b-keypad__key b-keypad__key_keys_principal">2</button>
-      <button class="b-keypad__key b-keypad__key_keys_principal">3</button>
-      <button class="b-keypad__key b-keypad__key_keys_principal">-</button>
-      <button class="b-keypad__key b-keypad__key_keys_principal">.</button>
-      <button class="b-keypad__key b-keypad__key_keys_principal">0</button>
-      <button class="b-keypad__key b-keypad__key_keys_principal">/</button>
-      <button class="b-keypad__key b-keypad__key_keys_principal">x</button>
+      <button class="b-keypad__key b-keypad__key_keys_primary">4</button>
+      <button class="b-keypad__key b-keypad__key_keys_primary">5</button>
+      <button class="b-keypad__key b-keypad__key_keys_primary">6</button>
+      <button class="b-keypad__key b-keypad__key_keys_primary">+</button>
+      <button class="b-keypad__key b-keypad__key_keys_primary">1</button>
+      <button class="b-keypad__key b-keypad__key_keys_primary">2</button>
+      <button class="b-keypad__key b-keypad__key_keys_primary">3</button>
+      <button class="b-keypad__key b-keypad__key_keys_primary">-</button>
+      <button class="b-keypad__key b-keypad__key_keys_primary">.</button>
+      <button class="b-keypad__key b-keypad__key_keys_primary">0</button>
+      <button class="b-keypad__key b-keypad__key_keys_primary">/</button>
+      <button class="b-keypad__key b-keypad__key_keys_primary">x</button>
       <button class="b-keypad__key b-keypad__key_keys_secondary b-keypad__key_width_double_left">RESET</button>
-      <button class="b-keypad__key b-keypad__key_keys_third b-keypad__key_width_double_right">=</button>
+      <button class="b-keypad__key b-keypad__key_keys_tertiary b-keypad__key_width_double_right">=</button>
     </section>
   </main>
   
