Correccion de Type en la etiqueta del script

--- a/index.html
+++ b/index.html
@@ -72,6 +72,6 @@
     Coded by <a href="#">Pablo Tachella</a>.
   </div>
 
-  <script type="module" src="./index.js"></script>
+  <script src="./index.js"></script>
 </body>
 </html>
