Se personalizo README

--- a/index.html
+++ b/index.html
@@ -49,92 +49,92 @@
       <button 
         id="7" 
         onclick="inputValue(this.innerText)"
-        class="b-keypad__key b-keypad__key_keys_primary">7
+        class="b-keypad__key key_keys_primary">7
       </button>
       <button 
         id="8" 
         onclick="inputValue(this.innerText)"
-        class="b-keypad__key b-keypad__key_keys_primary">8
+        class="b-keypad__key key_keys_primary">8
       </button>
       <button 
         id="9" 
         onclick="inputValue(this.innerText)"
-        class="b-keypad__key b-keypad__key_keys_primary">9
+        class="b-keypad__key key_keys_primary">9
       </button>
       <button 
         id="del" 
         onclick="inputDel()"
-        class="b-keypad__key b-keypad__key_keys_secondary">DEL
+        class="b-keypad__key key_keys_secondary">DEL
       </button>
       <button 
         id="4" 
         onclick="inputValue(this.innerText)"
-        class="b-keypad__key b-keypad__key_keys_primary">4
+        class="b-keypad__key key_keys_primary">4
       </button>
       <button 
         id="5" 
         onclick="inputValue(this.innerText)"
-        class="b-keypad__key b-keypad__key_keys_primary">5
+        class="b-keypad__key key_keys_primary">5
       </button>
       <button 
         id="6" 
         onclick="inputValue(this.innerText)"
-        class="b-keypad__key b-keypad__key_keys_primary">6
+        class="b-keypad__key key_keys_primary">6
       </button>
       <button 
         id="sum" 
         onclick="inputOperator(this.innerText)"
-        class="b-keypad__key b-keypad__key_keys_primary">+
+        class="b-keypad__key key_keys_primary">+
       </button>
       <button 
         id="1" 
         onclick="inputValue(this.innerText)"
-        class="b-keypad__key b-keypad__key_keys_primary">1
+        class="b-keypad__key key_keys_primary">1
       </button>
       <button 
         id="2" 
         onclick="inputValue(this.innerText)"
-        class="b-keypad__key b-keypad__key_keys_primary">2
+        class="b-keypad__key key_keys_primary">2
       </button>
       <button 
         id="3" 
         onclick="inputValue(this.innerText)"
-        class="b-keypad__key b-keypad__key_keys_primary">3
+        class="b-keypad__key key_keys_primary">3
       </button>
       <button 
         id="subtract" 
         onclick="inputOperator(this.innerText)"
-        class="b-keypad__key b-keypad__key_keys_primary">-
+        class="b-keypad__key key_keys_primary">-
       </button>
       <button 
         id="dot" 
         onclick="inputValue(this.innerText)"
-        class="b-keypad__key b-keypad__key_keys_primary">.
+        class="b-keypad__key key_keys_primary">.
       </button>
       <button 
         id="0" 
         onclick="inputValue(this.innerText)"
-        class="b-keypad__key b-keypad__key_keys_primary">0
+        class="b-keypad__key key_keys_primary">0
       </button>
       <button 
         id="divide" 
         onclick="inputOperator(this.innerText)"
-        class="b-keypad__key b-keypad__key_keys_primary">/
+        class="b-keypad__key key_keys_primary">/
       </button>
       <button 
         id="multiply" 
         onclick="inputOperator(this.innerText)"
-        class="b-keypad__key b-keypad__key_keys_primary">x
+        class="b-keypad__key key_keys_primary">x
       </button>
       <button 
         id="reset" 
         onclick="inputReset()"
-        class="b-keypad__key b-keypad__key_keys_secondary b-keypad__key_width_double_left">RESET
+        class="b-keypad__key key_keys_secondary key_width_double_left">RESET
       </button>
       <button 
         id="equal" 
         onclick="inputEqual()"
-        class="b-keypad__key b-keypad__key_keys_tertiary b-keypad__key_width_double_right">=
+        class="b-keypad__key key_keys_tertiary key_width_double_right">=
       </button>
     </section>
   </main>
