Se movio el archivo index.html a la raiz del proyecto

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
-  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
-  <link rel="stylesheet" href="./styles.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="./src/styles.css">
   <title>Frontend Mentor | Calculator app</title>
 </head>
 
@@ -80,7 +80,7 @@
   </div>
    -->
 
-  <script src="./index.js"></script>
+  <script src="./src/index.js"></script>
 </body>
 
 </html>
